# atomvm_m5

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml  rebar.config
.github/workflows/: build.yml  doc.yaml
examples/basic/ex_how_to_use/: .formatter.exs  .gitignore  README.md  mix.exs
examples/basic/ex_how_to_use/lib/: how_to_use.ex  wav_data.ex
examples/basic/hello_world/: mix.exs
examples/basic/hello_world/lib/: hello_world.ex
examples/basic/how_to_use/: README.md
examples/basic/how_to_use/src/: how_to_use.app.src  how_to_use.erl
examples/basic/rtc/: README.md  rebar.config
examples/basic/rtc/src/: .gitignore  config.hrl-template  rtc.app.src  rtc.erl
nifs/: atomvm_m5.cc  atomvm_m5_btn.cc  atomvm_m5_display.cc  atomvm_m5_i2c.cc  atomvm_m5_imu.cc  atomvm_m5_nifs.h  atomvm_m5_power.cc  atomvm_m5_power_axp192.cc  atomvm_m5_rtc.cc  atomvm_m5_speaker.cc
nifs/include/: atomvm_m5.h
src/: atomvm_m5.app.src  m5.erl  m5_display.erl  m5_power.erl  m5_power_axp192.erl  m5_rtc.erl  m5_speaker.erl
